--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,10 @@ setuptools>=65.5.1,<67.0.0
 torchvision>=0.10.0
 torchmetrics==0.8
 hydra-core>=1.2.0
-onnxruntime>=1.15.0
+onnxruntime>=1.17.1
 # onnx 1.16.0 introduce IR 10 which is not yet supported by onnx runtime & graphsurgeon
-onnx==1.15.0
+onnx==1.17.1
+numpy==1.24.4
 pillow>=10.2.0
 pip-tools>=6.12.1
 einops==0.3.2
